updated fro Open CV 2019

--- a/report/report.tex
+++ b/report/report.tex
@@ -55,17 +55,15 @@
 
 \begin{document}
 
-\lecture{Midterm Exam Report}{Fall 2015}{Your name}{Advance Algorithm Programming}
+\lecture{Midterm Exam Report}{Fall 2019}{Your name}{CS 633 Computational Geometry}
 
-\section{Summary of the two methods}
-
-\subsection{hedcuter method}
-
-\subsection{voronoi method}
-
-\section{Comparison of the two methods}
+\section{Summary of the hedcut method}
 
 \section{Improvement of hedcuter method}
+
+\section{Conclusion}
+
+What are the known bugs or limitations.
 
 \bibliographystyle{plain}
 \bibliography{report}
